--- a/beelist/beelist_kit_web/download.html
+++ b/beelist/beelist_kit_web/download.html
@@ -42,7 +42,7 @@
         box-sizing: border-box;
         background-color: #b823bd;
         text-decoration: none;"
-        href="downloads/1.1/win64/BeelistKit.exe"
+        href="downloads/1.1/win64/BeelistKit.zip"
         target="_blank"
         >Download Windows X64</a>
     </div>
